Fixes styling issue where long toast message getting cut off. Shortens add to cart notification message.

--- a/client/src/components/toast/toast.styles.scss
+++ b/client/src/components/toast/toast.styles.scss
@@ -76,11 +76,7 @@
 .notification-message {
   margin: 0;
   text-align: left;
-  height: 18px;
   margin-left: -1px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .notification-image {
